<resources>
    <string name="title_activity_maps">CoMfortMap</string>
    <string name="app_name">CoMfort</string>
    <string name="title_activity_welcome">Home Screen</string>


    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="error_no_location" translatable="false">No location added! Hit the floating action button to add one.</string>
    <string name="widget_title" translatable="false">CoMfortMap</string>
    <string name="fab_description">FAB button description</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="SuccefulLogIn">Succeful LogIn</string>
    <string name="unSuccefulLogin">UserName Or Passward  My be incorrect</string>
    <string name="starred_string">Restuarant</string>
    <string name="done_add_Tofavorite">Done, Added To Favorite</string>
    <string name="not_added_Tofavorite">Error : post not add 🙁 </string>
    <string name="GPS_Enable">GPS is Enabled in your devide</string>
    <string name="choose_Catogory">Choose Category First</string>
    <string name="OpenNetwork_NotcurrentLocation">Please Open Network and Check current Location</string>
    <string name="search_place">This Search Place</string>
    <string name="Message_To_OpenGPS">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="Message_when_EmptyUserName_And_Password">Username/password field empty</string>
    <string name="Message_success_Login">تم تسجيلك بنجاح ^_^ </string>
    <string name="Message_If_Signin_before">هذا الايميل مستخدم من قبل</string>
    <string name="Message_If_failLoad_from_FireBase">فشل التسجيل</string>
    <string name="Message_Fail_ToAdd_ToFireBase">Error : post not add 🙁 </string>
    <string name="CorrectSignin">User registered</string>
    <string name="CoMfortO">CoMfortO</string>
    <string name="Restuarant">Restuarant</string>
    <string name="No_account_yetCreate_one">No account yet? Create one</string>
    <string name="hint_Email">Email</string>
    <string name="hint_name">Name</string>
    <string name="name_user">name of user</string>
    <string name="name_of_city">Gharbia-tanta-basyoun</string>
    <string name="open">Open</string>
    <string name="open_hours">Opening Hours</string>
    <string name="all_review">All Review</string>
    <string name="name_header">Eman Eraky</string>
    <string name="Snackbar_Message">Please choise type of place </string>
    <string name="Goto_Settings">Goto Settings Page To Enable GPS</string>
    <string name="cancel_Gps">Cancel</string>
    <string name="inbox">INBOX</string>
    <string name="Nearby" translatable="false">Nearby</string>
    <string name="Check_Network">Check Network</string>
    <string name="Wrong_choose">Somethings Wrong</string>
    <string name="Favorite">Favorite</string>
    <string name="buttontext">Create Account</string>
    <string name="email_header">emanMohamed342@yahoo.com</string>
    <string name="hint_Pass">Password</string>
    <string name="login">Login</string>
    <string name="Hotel">Hotel</string>
    <string name="Travelagency">Travelagency</string>
    <string name="Hospital">Hospital</string>
    <string name="currentLocation">Your Current Location</string>
    <string name="inbox_string">Home</string>
    <string name="sent_mail_string">Hotels</string>
    <string name="draft_string">Hospital</string>
    <string name="subheader">Subheader</string>
    <string name="favorite">Favorite</string>
    <string name="To_signin">Already a member? Login</string>
    <string name="RequestPermissions">permission denied</string>
    <string name="title_Marker">Place Location</string>
    <string name="Current_Position">Current Position</string>
    <string name="format" translatable="false">latitude:%.3f longitude:%.3f</string>
    <string name="Error_MyApplication">Error is in application </string>
    <string name="logout">LogOut</string>
    <string name="all_mail_string">All mails</string>
    <string name="company_string">Company</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="expand">paralax</string>
    <string name="paralax">ImageBack</string>

</resources>
