<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:icon="@drawable/placeholder"
            android:title="@string/inbox_string" />

        <item
            android:id="@+id/starred"
            android:checked="false"
            android:icon="@drawable/dinner"
            android:title="@string/starred_string" />

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:icon="@drawable/hotel"
            android:title="@string/sent_mail_string" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/cardiogram"
            android:title="@string/draft_string" />

        <item
            android:id="@+id/spam"
            android:checked="false"
            android:icon="@drawable/sunbed"
            android:title="@string/company_string" />

        <item
            android:id="@+id/fav"
            android:checked="false"
            android:icon="@drawable/star"
            android:title="@string/favorite" />
        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/power"
            android:title="@string/logout" />

    </group>
</menu>