<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.emyeraky.nearlymap.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/back"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/color_cursor_white"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/smile" />

                <TextView
                    android:id="@+id/nameloc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/name_user"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/color_cursor_white"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/loc" />


                <TextView
                    android:id="@+id/addressloc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/name_of_city"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/color_cursor_white"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/timeleft" />


                <TextView
                    android:id="@+id/openhour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/open"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/color_cursor_white"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/alltime" />

                <TextView
                    android:text="@string/open_hours"
                    android:id="@+id/text"
                    android:textColor="@color/black"
                    android:paddingLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:paddingLeft="30dp"
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15px"
                android:layout_marginTop="30px"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/earth" />

                <TextView
                    android:id="@+id/allreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_review"
                    android:textColor="@color/black" />

                <ListView
                    android:id="@+id/review"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginTop="20dp"
                    android:scrollbars="none"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>